--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,24 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testRunner/testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <environmentVariables>
+                        <baseURI>https://petstore.swagger.io/v2</baseURI>
+                    </environmentVariables>
+                    <workingDirectory>target/</workingDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
@@ -77,6 +94,10 @@
             <version>7.4.0</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.1.2</version>
+        </dependency>
     </dependencies>
 </project>
