--- a/.github/workflows/saucedemo.yml
+++ b/.github/workflows/saucedemo.yml
@@ -1,5 +1,3 @@
-# This workflow will build a Java project with Maven
-
 name: Run SauceDemo UI Test Cases
 
 on:
@@ -11,21 +9,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - uses: browser-actions/setup-chrome@latest
-      run: chrome --version
+      - uses: actions/checkout@v4
 
-    - uses: browser-actions/setup-firefox@latest
-      run: firefox --version
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    - uses: browser-actions/setup-edge@latest
-      run: edge --version
+      - name: Set up Chrome
+        uses: browser-actions/setup-chrome@latest
+        with:
+          chrome-version: latest
 
-    - name: Build and Run tests with Maven
-      run: mvn clean test -DsuiteFile=testRunner/testng.xml
+      - name: Set up Firefox
+        uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: latest
+
+      - name: Set up Edge
+        uses: browser-actions/setup-edge@latest
+        with:
+          edge-version: latest
+
+      - name: Build and Run tests with Maven
+        run: mvn clean test -DsuiteFile=testRunner/testng.xml
