--- a/.github/workflows/saucedemo.yml
+++ b/.github/workflows/saucedemo.yml
@@ -19,14 +19,8 @@ jobs:
           cache: maven
 
       - name: Set up Chrome
-        uses: browser-actions/setup-chrome@latest
-        with:
-          chrome-version: latest
-
-      - name: Set up Firefox
-        uses: browser-actions/setup-firefox@latest
-        with:
-          firefox-version: latest
+      - uses: browser-actions/setup-chrome@latest
+      - run: chrome --version
 
       - name: Build and Run tests with Maven
         run: mvn clean test -DsuiteFile=testRunner/testng.xml
